# Pj-STYX

./: .gitignore  BUILD_MVP.md  CLAUDE.md  EXPERIMENT_LOG.md  GATE_REVIEW.md  README.md  features.json  pyproject.toml
.streamlit/: config.toml
app/: app.py
app/pages/: 00_home.py  (+5 more)
docs/: ARCH_REDTEAM_STYX.md  MAAFI_STYX_verdict.md  STYX_METHODOLOGY.md  STYX_PRD.md  STYX_WARD_FIX_SPEC.md  STYX_WARD_FIX_SPEC_P1.md  STYX_clinical_basis_assets.md  STYX_clinical_basis_build_prompt.md  STYX_explorer_notebooks.md  config.toml  news2-explainer.html  virtual_wards_ideation.md  ward_card_target.html  ward_overview_target.html
explorers/: E3_time_to_event.ipynb  E3_time_to_event.py
notebooks/: 01_synthetic_fidelity.py  02_state_space.py  03_anticipation_lead.py  04_rationale_faithfulness.py  05_methods_story.py  05_walkthrough.py  06_cohort_signal.py  07_reach_history.py  08_reach_carer.py  09_reach_decoupling.py  10_how_styx_predicts.ipynb  10_how_styx_predicts.py  analysis.py  saturation_analysis.py
styx/: __init__.py  anticipation.py  clinical_basis.py  config.py  explain.py  frame.py  readouts.py  timeline.py
tests/: test_baseline.py  test_board.py  test_clinical_basis.py  test_cohort_diversity.py  test_comparison.py  test_explainer.py  test_g1.py  test_g2.py  test_g3.py  test_g4.py  test_milestone.py  test_no_codename.py  test_no_raw_enum.py  test_observations.py  test_reach_carer.py  test_reach_decoupling.py  test_reach_history.py  test_readouts.py  test_smoke.py  test_timeline.py  test_trajectory_scrub.py  test_ward_boxes.py  test_ward_ux.py  test_watch_tiers.py
(+40 files in other folders)
