[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "styx"
version = "0.0.0"
description = "STYX — virtual-ward physiological-trajectory monitor"
requires-python = ">=3.10"
dependencies = [
    "numpy",
    "scipy",
    "scikit-learn",
    "lifelines",
    "streamlit",
    "plotly",
    "jupytext",
    "pytest",
    "ruff",
]

[project.optional-dependencies]
# Notebook-execution tooling — so `jupytext --to ipynb --execute notebooks/*.py`
# (restart-run-all) is reproducible for anyone, not just a hand-patched .venv.
dev = [
    "jupytext",
    "nbconvert",
    "ipykernel",
    "kaleido",  # static-PNG export so the committed .ipynb figures render on github.com
]

[tool.setuptools]
packages = [
    "styx",
    "styx.synth",
    "styx.state",
    "styx.forecast",
    "styx.risk",
    "styx.rationale",
    "styx.theograph",
    "styx.cohort",
    "styx.reach",
    "styx.viz",
]

[tool.ruff]
line-length = 100

[tool.pytest.ini_options]
testpaths = ["tests"]
